<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Anime</string>
    <string name="episode_n">Episode %d</string>
    <string name="episode_ns">Episode %s</string>
    <string name="likes_n">%s likes</string>
    <string name="episodes">Episodes</string>
    <string name="featured">Latest Episodes</string>
    <string name="latest_series">Latest Series</string>
    <string name="top_anime">Top 10 Anime</string>
    <string name="latest_added">Latest additions</string>
    <string name="movies">Movies</string>
    <string name="ovas">OVAs</string>
    <string name="ongoing">Ongoing</string>
    <string name="finished">Finished</string>
    <string name="no_servers">No servers available</string>
    <string name="server_error">An error occurred. Please retry.</string>
    <string name="episode_title">%s | Episode %d</string>
    <string name="error_loading">Results could not be loaded</string>
    <string name="retry">Retry</string>
    <string name="search">Search…</string>
    <string name="no_results">No results</string>
    <string name="browse">Browse</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="next_episode">Episode %d soon</string>
    <string name="latest_movies">Latest Movies</string>
    <string name="latest_ovas">Latest OVAs</string>
    <string name="serie">Serie</string>
    <string name="movie">Movie</string>
    <string name="ova">OVA</string>
    <string name="special">Special</string>
    <string name="preview">Preview</string>
    <string name="episodes_selector">%d to %d</string>
    <string name="home_title">Home</string>
    <string name="search_title">Search</string>
    <string name="genre_title">Genres</string>
    <string name="year_title">Year</string>
    <string name="synopsis">Synopsis</string>
    <string name="themes">Themes</string>
    <plurals name="type_episodes">
        <item quantity="one">%s | %d episode</item>
        <item quantity="other">%s | %d episodes</item>
    </plurals>
</resources>