<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/info_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="24dp"
            android:animateLayoutChanges="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/player_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintTop_toTopOf="parent">

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube_player_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:autoPlay="false"
                    app:enableAutomaticInitialization="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:showFullScreenButton="false" />

                <ToggleButton
                    android:id="@+id/volume_button"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/volume_button"
                    android:checked="false"
                    android:enabled="false"
                    android:textOff=""
                    android:textOn=""
                    app:layout_constraintBottom_toBottomOf="@id/youtube_player_view"
                    app:layout_constraintEnd_toEndOf="@id/youtube_player_view" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/banner"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:alpha="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="centerCrop"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="@id/youtube_player_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@sample/thumbnail" />

                <ImageView
                    android:id="@+id/replay_button"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:elevation="4dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/banner"
                    app:layout_constraintEnd_toEndOf="@id/banner"
                    app:layout_constraintStart_toStartOf="@id/banner"
                    app:layout_constraintTop_toTopOf="@id/banner"
                    app:srcCompat="@drawable/ic_replay"
                    app:tint="@color/white"
                    tools:visibility="visible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginBottom="28dp"
                    android:alpha="0.8"
                    android:background="@drawable/preview_background"
                    android:includeFontPadding="false"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="6dp"
                    android:text="@string/preview"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ProgressBar
                    android:id="@+id/youtube_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/youtube_player_view"
                    app:layout_constraintEnd_toEndOf="@id/youtube_player_view"
                    app:layout_constraintStart_toStartOf="@id/youtube_player_view"
                    app:layout_constraintTop_toTopOf="@id/youtube_player_view" />

                <com.letrix.anime.utils.YouTubePlayerSeekBar
                    android:id="@+id/player_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-3dp"
                    android:layout_marginEnd="-3dp"
                    android:translationY="3dp"
                    app:customSeekBar="@drawable/seek_bar"
                    app:layout_constraintBottom_toBottomOf="@id/youtube_player_view"
                    app:seakable="false"
                    app:seekFullWidth="true"
                    app:showCurrentTime="false"
                    app:showDuration="false"
                    app:showThumb="false" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/poster"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:layout_marginTop="24dp"
                android:scaleType="centerCrop"
                android:visibility="gone"
                app:layout_constraintDimensionRatio="H,75:106"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/RoundCorner"
                tools:src="@sample/poster[1]" />

            <LinearLayout
                android:id="@+id/info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="12dp"
                android:divider="@drawable/divider"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:showDividers="middle"
                app:layout_constraintTop_toBottomOf="@+id/player_layout">

                <Button
                    android:id="@+id/mark_watched"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/red_500"
                    android:text="Mark as Watched"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:maxLines="3"
                    android:minLines="1"
                    android:textSize="28sp"
                    tools:text="Wonder Egg Priority" />

                <TextView
                    android:id="@+id/state"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textColor="#4CAF50"
                    android:textStyle="bold"
                    tools:text="Ongoing" />

                <TextView
                    android:id="@+id/synonyms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:text="ワンダーエッグ・プライオリティ" />

                <TextView
                    android:id="@+id/type_episodes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Serie | 6 episodes" />

                <TextView
                    android:id="@+id/next_episode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="2021-02-16" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    tools:itemCount="1" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/expandable_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ToggleButton
                            android:id="@+id/expandable_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:clickable="false"
                            android:drawableEnd="@drawable/selector_arrow"
                            android:focusable="false"
                            android:padding="12dp"
                            android:text="@string/synopsis"
                            android:textOff="@string/synopsis"
                            android:textOn="@string/synopsis" />

                        <net.cachapa.expandablelayout.ExpandableLayout
                            android:id="@+id/expandable"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:el_duration="300"
                            app:el_expanded="false"
                            app:el_parallax="0.5">

                            <TextView
                                android:id="@+id/synopsis"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="12dp"
                                android:layout_marginBottom="8dp"
                                android:ellipsize="end"
                                tools:text="Una historia de chicas con problemas, tejida por el guionista Shinji Nojima en el mundo del anime.Dirigida por una voz misteriosa durante un paseo de medianoche, Ai Ooto, de 14 años, recoge un huevo." />

                        </net.cachapa.expandablelayout.ExpandableLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/themes_expandable_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ToggleButton
                            android:id="@+id/themes_expandable_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:clickable="false"
                            android:drawableEnd="@drawable/selector_arrow"
                            android:focusable="false"
                            android:padding="12dp"
                            android:text="@string/synopsis"
                            android:textOff="@string/themes"
                            android:textOn="@string/themes" />

                        <net.cachapa.expandablelayout.ExpandableLayout
                            android:id="@+id/themes_expandable"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:el_duration="300"
                            app:el_expanded="false"
                            app:el_parallax="0.5">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ProgressBar
                                    android:id="@+id/themes_progress_bar"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="60dp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <TextView
                                    android:id="@+id/themes_error_message"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:paddingHorizontal="30dp"
                                    android:paddingVertical="15dp"
                                    android:textAlignment="center"
                                    android:textSize="18sp"
                                    android:visibility="gone"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <androidx.recyclerview.widget.RecyclerView
                                    android:id="@+id/themes_recycler"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />
                            </androidx.constraintlayout.widget.ConstraintLayout>
                        </net.cachapa.expandablelayout.ExpandableLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <Spinner
                    android:id="@+id/episodes_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/episodes_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/info_layout"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/error_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:text="@string/server_error"
                android:textAlignment="center"
                android:textSize="20sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>